<resources>
    <string name="app_name">Anirate</string>
    <string name="anime">Enter an Anime</string>
    <string name="anime_name">Anime</string>
    <string name="add_button">Add</string>
    <string name="comment">Comments</string>
    <string name="favorite_character">Favorite Character</string>
    <string name="recommend">Recommend to Others?</string>
    <string name="rating">Rating</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign out</string>
    <string name="update">Update</string>

    <string-array name="anime_rating">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="recommendation_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>