<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_name"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimary"
            />

        <EditText
            android:id="@+id/animeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/anime"
            android:layout_margin="3dp"/>

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/comment"
            android:layout_margin="3dp"/>

        <EditText
            android:id="@+id/favoriteCharacterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/favorite_character"
            android:layout_margin="3dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/ratingSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:padding="10dp"
                android:entries="@array/anime_rating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="10sp"
                android:layout_alignLeft="@+id/ratingSpinner"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="10sp"
                android:layout_alignLeft="@+id/recommendationSpinner"
                />

            <Spinner
                android:id="@+id/recommendationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:entries="@array/recommendation_array"
                android:layout_marginTop="20dp"
                android:padding="10dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/add_edit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/add_button"/>


    </LinearLayout>

</LinearLayout>